--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.1",
     "webpack": "^4.46.0"
   },
