--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.19.3",
+    "gsap": "^3.11.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
