--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
+    "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.27.2",
     "core-js": "^3.19.3",
     "gsap": "^3.11.1",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-animate-onscroll": "^1.0.8",
     "vue-server-renderer": "^2.6.14",
     "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
